examples/kubernetes/efk/apm-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apm-ingress
  namespace: logging
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: apm.cno-01-01.owl.co-pla.training
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: apm-server-staging-apm-http
                port:
                  number: 8200
